# TitanEngine

./: LICENSE  README.md
Source/: CMakeLists.txt
Source/Engine/Core/: CMakeLists.txt  CoreTypes.h
Source/Engine/Core/Containers/: Array.h
Source/Engine/Core/Include/: CoreTypes.h
Source/Engine/Core/Include/Containers/: Array.h  Array.inl  HeapAllocator.h  HeapAllocator.inl  String.h
Source/Engine/Core/Include/Math/: CommonFunctions.h  Math.h
Source/Engine/Core/Include/Memory/: Allocator.h  Memory.h  MemoryUtils.h
Source/Engine/Core/Include/Misc/: BasicTypes.h  TypeTraits.h
Source/Engine/Core/Include/Platform/: Defines.h  StringUtils.h
Source/Engine/Core/Include/String/: Encoding.h
Source/Engine/Core/Include/Traits/: EnableIf.h  IsTrivial.h  SelectIf.h  Traits.h
Source/Engine/Core/Include/TypeTraits/: And.h  IsBitwiseConstructible.h  IsPOD.h  IsSame.h  IsTriviallyConstructible.h  IsTriviallyDestructible.h  MakeUnsigned.h  RemoveCV.h  RemoveReference.h  TypeTraits.h
Source/Engine/Core/Include/Types/: BasicTypes.h
Source/Engine/Core/Math/: Math.h
Source/Engine/Core/Memory/: Allocator.h
Source/Engine/Core/Misc/: BasicTypes.h  TypeTraits.h
Source/Engine/Core/Platform/: Defines.h  Memory.h  Platform.h
Source/Engine/Core/Platform/Base/: BasePlatformMemory.h
Source/Engine/Core/Platform/GCC/: GCCDefines.h
Source/Engine/Core/src/: CorePCH.h  CoreTypes.h
Source/Engine/Launch/: CMakeLists.txt  main.cpp
Source/Engine/Launch/Source/: main.cpp
Source/Engine/Renderer/: CMakeLists.txt
Source/Engine/Renderer/src/: Window.h
(+40 files in other folders)
